# amused-py

./: DESCRIPTION.md  README.md  TEST_STATUS.md  __init__.py  amused_config.py  cli_config.py  muse_config.py  muse_ppg_heart_rate.py  muse_realtime_decoder.py  muse_stream_client.py  muse_visualizer.py  pyproject.toml  setup.py
examples/: 01_basic_streaming.py  02_full_sensors.py  03_parse_data.py  04_stream_with_callbacks.py  05_save_and_replay.py  06_realtime_visualization.py  06_realtime_visualization_fixed.py  06_viz_proper.py  06_viz_qasync.py  06_viz_windows_fix.py  07_device_configuration.py  07_simple_viz.py  08_fast_viz.py  08_simple_discovery.py  09_adaptive_viz.py  10_realtime_viz.py  11_brain_waves.py  12_simple_metrics.py  13_clean_display.py
tests/: test_integration.py  test_ppg_fnirs.py  test_realtime_decoder.py
