[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amused"
version = "0.1.0"
authors = [
    {name = "nexon33", email = ""},
]
description = "Open-source Python library for streaming data from Muse S (Athena) EEG headbands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "muse",
    "eeg",
    "ppg",
    "fnirs",
    "biometrics",
    "neuroscience",
    "brain-computer-interface",
    "bci",
    "bluetooth",
    "ble",
    "biosignals",
    "heart-rate",
    "meditation",
    "sleep-monitoring"
]
dependencies = [
    "bleak>=0.21.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.22",
]

[project.urls]
Homepage = "https://github.com/nexon33/amused"
Documentation = "https://github.com/nexon33/amused#readme"
Repository = "https://github.com/nexon33/amused"
Issues = "https://github.com/nexon33/amused/issues"

[tool.setuptools]
packages = ["amused", "amused.tests", "amused.examples"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]